tests/ui/fail_missing_input.stderr
error[E0599]: no method named `build` found for struct `ResponseRequestBuilder<ai_client::openai::responses::Gpt5, MissingInput>` in the current scope
 --> tests/ui/fail_missing_input.rs:4:48
  |
4 |     let _ = ResponseRequest::<Gpt5>::builder().build();
  |                                                ^^^^^ method not found in `ResponseRequestBuilder<ai_client::openai::responses::Gpt5, MissingInput>`
  |
  = note: the method was found for `ResponseRequestBuilder<M, HasInput>`
